Minor fix: Updated z-index on side menu so it renders on top of the calendar grip properly

--- a/src/components/_sidemenus.scss
+++ b/src/components/_sidemenus.scss
@@ -1,5 +1,6 @@
 #menu_right {
     position: fixed;
+    z-index: 1;
     right: 0;
     margin: 1rem;
     padding: 0.3rem;
