--- a/style.css
+++ b/style.css
@@ -179,6 +179,7 @@ header {
 
 #menu_right {
   position: fixed;
+  z-index: 1;
   right: 0;
   margin: 1rem;
   padding: 0.3rem;
